train test splitting the data into training and tedting datasets

--- a/credit_card_fraud_detection.ipynb
+++ b/credit_card_fraud_detection.ipynb
@@ -2335,9 +2335,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df5c6a76-5937-4da4-b0e0-edea006a1330",
+   "metadata": {},
+   "source": [
+    "## trainig the model using logistic regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "769ebb19-ff22-4c16-8a97-b0fcadff5844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(787, 30) (197, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train test split to split the data intpo training and testing data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=21)\n",
+    "print(X_train.shape, X_test.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153949f0-839b-4727-9d73-e1d438af6b8f",
+   "id": "b00ee235-c90f-47bc-81ca-d153e4d46956",
    "metadata": {},
    "outputs": [],
    "source": []
