shapes of the splits

--- a/credit_card_fraud_detection.ipynb
+++ b/credit_card_fraud_detection.ipynb
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "769ebb19-ff22-4c16-8a97-b0fcadff5844",
    "metadata": {},
    "outputs": [
@@ -2352,14 +2352,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(787, 30) (197, 30)\n"
+      "(984, 30) (787, 30) (197, 30)\n"
      ]
     }
    ],
    "source": [
     "# train test split to split the data intpo training and testing data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=21)\n",
-    "print(X_train.shape, X_test.shape)"
+    "print(X.shape, X_train.shape, X_test.shape)"
    ]
   },
   {
