model evaluation on training data

--- a/credit_card_fraud_detection.ipynb
+++ b/credit_card_fraud_detection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "7f3429f1-86a2-448b-ae77-d07de8e3c663",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn import metrics\n",
+    "from sklearn.metrics import accuracy_score\n",
     "import seaborn as sns"
    ]
   },
@@ -2808,13 +2808,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "2162500b-10e1-48a1-8f8a-646903f33317",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9466327827191868"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# model evaluation"
+    "# model evaluation on training data\n",
+    "X_pred = log_reg.predict(X_train)\n",
+    "X_pred_score = accuracy_score(X_pred, y_train)\n",
+    "X_pred_score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60ee2bd0-b552-43b0-b1a3-77741b31ba6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
